fix: resturant list h2 contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: 8A4500;
   font-family: Arial,sans-serif;
   font-size: 1.3em;
   font-weight: 200;
